[package]
name = "bevy_learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
editor_window = []
debug = ["bevy_rapier2d/debug-render", "editor_window"]

[dependencies]
rand = "0.8"
benimator = "3"
bevy_rapier2d = "0.14"
bevy_input_actionmap = { git = "https://github.com/lightsoutgames/bevy_input_actionmap" }
bevy-inspector-egui = "0.10"
bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls", features = [] }
bevy_ecs_ldtk = "0.3"

[dependencies.bevy]
version = "0.7"
default-features = true

[dev-dependencies]
